[package]
name = "dlms-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "*"
